--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
-<?php
-require_once('includes/header.inc.php');
-?>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Shadow Image &ndash; Convert Images to CSS box-shadow</title>
+
+    <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width = device-width, initial-scale = 1.0, user-scalable = no">
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.min.css" />
+  </head>
+  <body>
 
 <header class="header-wrapper">
   <div class="header-content">
@@ -61,6 +73,6 @@ require_once('includes/header.inc.php');
   </div>
 </div>
 
-<?php
-require_once('includes/footer.inc.php');
-?>
+    <script type="text/javascript" src="assets/javascripts/application.min.js"></script>
+  </body>
+</html>
